# kwin-we

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build-kwin-we.sh  flake.nix  install-arch.sh  install-debian.sh  install-fedora.sh
autotests/integration/: CMakeLists.txt  tiling_center_tile_test.cpp  tiling_controller_test.cpp  tiling_resize_test.cpp
cmake/modules/: FindKGlobalAccelD.cmake
data/kinetic-hidden-kcms/: CMakeLists.txt
data/kinetic-hidden-kcms/overrides/: breezestyleconfig.desktop  kcm_colors.desktop  kcm_desktoptheme.desktop  kcm_lookandfeel.desktop  kcm_splashscreen.desktop  kcm_style.desktop  kcm_wallpaper.desktop  klassystyleconfig.desktop  org.kde.kcolorschemeeditor.desktop
nix/: devshell.nix  home-module.nix  kwin-we.nix  nixos-module.nix  session.nix
scripts/: kineticwe.desktop.in  start-kineticwe.sh
src/: CMakeLists.txt  input.cpp  layers.cpp  placement.cpp  useractions.cpp  waylandwindow.cpp  window.cpp  window.h  workspace.cpp  workspace.h
src/kcms/: CMakeLists.txt
src/kcms/tiling/: CMakeLists.txt  kcm_kwin_tiling.json  tilingkcm.cpp  tilingkcm.h  tilingsettings.kcfg  tilingsettings.kcfgc
src/kcms/tiling/ui/: main.qml
src/plugins/: CMakeLists.txt
src/scene/: windowitem.cpp  windowitem.h
src/tiles/: centertilelayoutengine.cpp  centertilelayoutengine.h  layoutengine.cpp  layoutengine.h  masterstacklayoutengine.cpp  masterstacklayoutengine.h  stackedlayoutengine.cpp  stackedlayoutengine.h  tile.cpp  tile.h  tilemanager.cpp  tilemanager.h
src/tiling/: tilingcontroller.cpp  tilingcontroller.h  tilingrules.cpp  tilingrules.h  (+1 more)
(+7 files in other folders)
